index page core structure

--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
         <title>Bavarian Worx</title>
     </head>
     <body>
-        <h1>Welcome!</h1>
+        <header>
+            header content
+        </header>
+        <section>
+            Hero image
+        </section>
+        <section>
+            Meetings, events
+        </section>
+        <footer>
+            social media
+        </footer>
     </body>
  </html>
