--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
     </head>
     <body>
         <header>
-            header content
+            <a href="index.html">
+            <h1>BavarianWorx</h1>
+            </a>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+                
+            </nav>
         </header>
         <section>
             Hero image
