Logo header and van created and styled

--- a/index.html
+++ b/index.html
@@ -10,27 +10,23 @@
         <title>Bavarian Worx</title>
     </head>
     <body>
-        <header>
-            <a href="index.html">
-            <h1>BavarianWorx</h1>
-            </a>
-            <nav>
+        <div id="header">
+            <div class="header_content">
+                <div class="logo">
+                    <a href="index.html">BAVARIANWORX</a>
+                    <span>| by enthusiasts for enthusiasts</span>
+                </div>
+            <div class="menu">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li class="selected"><a href="index.html">Home</a></li>
+                    <li ><a href="about.html">About</a></li>
+                    <li ><a href="contact.html">Contact</a></li>
                 </ul>
-                
-            </nav>
-        </header>
-        <section>
-            Hero image
-        </section>
-        <section>
-            Meetings, events
-        </section>
-        <footer>
-            social media
-        </footer>
+            </div>
+        </div>
+    </div>
+    <div id="wrap">
+        <div class="top_slogan">We have an unshaken belief that cars are living entities</div>
+        <div> <a>slider goes here</a> </div> 
     </body>
  </html>
