--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
                 </div>
             <div class="menu">
                 <ul>
-                    <li class="selected"><a href="index.html">Home</a></li>
-                    <li ><a href="about.html">About</a></li>
-                    <li ><a href="contact.html">Contact</a></li>
+                    <li class="selected">
+                        <a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
