footer styled and added to all 3 pages

--- a/about.html
+++ b/about.html
@@ -18,15 +18,33 @@
                </div>
            <div class="menu">
                <ul>
-                   <li > <a href="index.html">Home</a></li>
+                   <li><a href="index.html">Home</a></li>
                    <li class="selected"><a href="about.html">About</a></li>
-                   <li ><a href="contact.html">Contact</a></li>
+                   <li><a href="contact.html">Contact</a></li>
                </ul>
            </div>
        </div>
    </div>
    <div id="wrap">
        <div class="top_slogan">We have an unshaken belief that cars are living entities</div>
-       <div> <a>main body</a> </div> 
+       <div> <a>slider goes here</a> </div> 
+       <div class="clear"></div>
+   </div>
+       <div class="footer">
+       <ul class="social-networks">
+           <li>
+               <a href="https://www.facebook.com/bavarianworx/" target="_blank" rel="noopener" aria-label="Visit our Facebook page(opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+           </li>
+           <li>
+               <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube page(opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+           </li>
+           <li>
+               <a href="https://www.instagram.com/bavarianworx/?hl=bg" target="_blank" rel="noopener" aria-label="Visit our Instagram page(opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+           </li>
+       </ul>
+       </div>
+       
+        <!-- font awsome script -->
+    <script src="https://kit.fontawesome.com/7ddb535590.js" crossorigin="anonymous"></script>
    </body>
 </html>
