homepage finished with slideshow and club ethos

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </div>
     <div id="wrap">
-        <div class="top_slogan">We have an unshaken belief that cars are living entities</div>
+        <div class="top_slogan">We have an unshaken belief that cars are living entities!</div>
        
         <div class="slideshow-container">
             <div class="mySlides fade">
@@ -54,8 +54,32 @@
              <span class="dot"></span> 
              <span class="dot"></span> 
             </div>
-
+            <div class="main_content">
+                <div class="section_one_three">
+                    <h2 class="centered_title">Our Hub</h2>
+                    <div class="roundimg">
+                        <a><img src="/assets/images/icon_hub.png" alt="meeting hub icon"></a>
+                    </div>
+                    <p class="centered_text">We offer our club members a hub where to can share their pasion with others.</p>
+                </div>
+                <div class="section_one_three">
+                    <h2 class="centered_title">Workshop</h2>
+                    <div class="roundimg">
+                        <a><img src="/assets/images/icon_services.png" alt="gears logo for workshop"></a>
+                    </div>
+                    <p class="centered_text">Always wanted a place where to improve and work on your car? We got you covered!</p>
+                </div>
+                <div class="section_one_three">
+                    <h2 class="centered_title">Keep in Touch</h2>
+                    <div class="roundimg">
+                        <a><img src="/assets/images/icon_contact.png" alt="meeting hub icon"></a>
+                    </div>
+                    <p class="centered_text">Our members can always keep in touch with us and fellow enthusiasts via our club.</p>
+                </div>
+                
+            </div>
              <div class="clear"></div>
+
              </div>
         <div class="footer">
         <ul class="social-networks">
