about page text completed and media queries

--- a/about.html
+++ b/about.html
@@ -26,8 +26,25 @@
        </div>
    </div>
    <div id="wrap">
-       <div class="top_slogan">We have an unshaken belief that cars are living entities</div>
-       <div> <a>slider goes here</a> </div> 
+       <div class="top_slogan">We have an unshaken belief that cars are living entities!</div>
+       <div class="section_full">
+        <h2>About Us</h2>
+            <p>BAVARIANWORX is the branch of the BMW Group responsible for all activities concerning the brand enthusiasts.
+                Since 2016, we have been home to BMW Group Classic and the first port of call for anything to do with classic vehicles from the BMW Group.
+                The site covers an area of 1300 square metres and is located not far from BMW Group headquarters – so it is also very close to BMW Welt, the BMW Museum and the BMW Group Plant.</p>
+                <hr>
+        <h2>Our Club & Community</h2>
+            <p>Join a big, global community. With over 2000 members, BAVARIANWORX has a bigger following than virtually any other brand in the world. This is something we are very proud of, and we seek to actively support all clubs in their work by offering help and advice.</p> 
+                <hr>
+         <h2>Our Anual Show</h2>
+            <p>In over a decade, BAVARIANWORX has introduced completly new standard to the whole automotive world. The annual gathering created for enthusiasts is highlighting best builds of custom car industry and most precious automotive gems found all over Europe. What differs the show from other events, is fact of strict selection process for cars joining the exhibition. Only the finest builds will have a chance to find the spot among a thousand carefully chosen cars. The formula of the show is relativley uncomplicated and based on the simple aesthetic forms inspired by art and street culture. International format of the show is measured trough the thousands of the kilometers that drivers take to be part of the exhibition. At the same time the distance is the best reccomendation for the ones who never before experienced the Ultrace atmosphere.
+                Despite ten years of experience, we are still perceived as a fashionable and very fresh event. Ultrace is the only and the ultimate opportunity to admire personalized cars from all over Europe, enjoy drifting at its best, and truly feel the bond with the street culture. Uncompromised focus on quality allowed us to create one of the most prestigous automotive events in the world.
+                We are pleased that our consistenc in action has been recognized by the leading brands of the automotive industry. Without such significant support, we could not grow dynamically.</p> 
+
+       </div> 
+       <div> 
+        
+      </div>
        <div class="clear"></div>
    </div>
        <div class="footer">
