contact form added

--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,27 @@
        </div>
    </div>
    <div id="wrap">
-       <div class="top_slogan">We have an unshaken belief that cars are living entities</div>
-       <div> <a>slider goes here</a> </div> 
+       <div class="top_slogan">We are egar to meet you!</div>
+        
+        <h2>Contact Form</h2>
+
+        <div class="container" >
+            <form action="/action_page.php">
+             <label for="fname">First Name</label>
+             <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+            <label for="lname">Last Name</label>
+            <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+    
+            <label for="email">Your Email</label>
+            <input type="text" id="email" name="youremail" placeholder="Your email..">
+
+            <label for="subject">Introduce Yourself</label>
+            <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+            <input type="submit" value="Submit">
+            </form>
+         </div> 
        <div class="clear"></div>
    </div>
        <div class="footer">
