footer copyright added to all pages

--- a/about.html
+++ b/about.html
@@ -47,19 +47,23 @@
       </div>
        <div class="clear"></div>
    </div>
-       <div class="footer">
-       <ul class="social-networks">
-           <li>
-               <a href="https://www.facebook.com/bavarianworx/" target="_blank" rel="noopener" aria-label="Visit our Facebook page(opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
-           </li>
-           <li>
-               <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube page(opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
-           </li>
-           <li>
-               <a href="https://www.instagram.com/bavarianworx/?hl=bg" target="_blank" rel="noopener" aria-label="Visit our Instagram page(opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
-           </li>
-       </ul>
-       </div>
+   <div class="footer">
+    <div class="footer_content">
+
+        <ul class="social-networks">
+        <li>
+        <a href="https://www.facebook.com/bavarianworx/" target="_blank" rel="noopener" aria-label="Visit our Facebook page(opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+        </li>
+         <li>
+        <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube page(opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+         </li>
+         <li>
+        <a href="https://www.instagram.com/bavarianworx/?hl=bg" target="_blank" rel="noopener" aria-label="Visit our Instagram page(opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+         </li>
+        </ul>
+        <a class="copyright">Copyright @ BAVARIANWORX 2022</a>
+    </div>
+</div>
        
         <!-- font awsome script -->
     <script src="https://kit.fontawesome.com/7ddb535590.js" crossorigin="anonymous"></script>
