--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
         <h2>Contact Form</h2>
 
         <div class="container" >
-            <form action="/action_page.php">
+            <form action="https://formdump.codeinstitute.net/" method="POST">
              <label for="fname">First Name</label>
              <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
