images path modified

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
 
         <div class="slideshow-container">
             <div class="mySlides fade">
-              <img src="/assets/images/slide_img1.jpg" style="width:100%" alt="3 bmws in a photo">
+              <img src="assets/images/slide_img1.jpg" style="width:100%" alt="3 bmws in a photo">
             </div>
             
             <div class="mySlides fade">
-              <img src="/assets/images/slide_img2.jpg" style="width:100%" alt="bmw m4 gts photo from above" >
+              <img src="assets/images/slide_img2.jpg" style="width:100%" alt="bmw m4 gts photo from above" >
             </div>
             
             <div class="mySlides fade">
-              <img src="/assets/images/slide_img3.jpg" style="width:100%" alt="bmw m4 gts photo from side">
+              <img src="assets/images/slide_img3.jpg" style="width:100%" alt="bmw m4 gts photo from side">
             </div>
 
             <div class="mySlides fade">
-                <img src="/assets/images/slide_img4.jpg" style="width:100%" alt="bmw m4 and bmw m4 gts">
+                <img src="assets/images/slide_img4.jpg" style="width:100%" alt="bmw m4 and bmw m4 gts">
               </div>
             </div>
             <br>
@@ -58,7 +58,7 @@
                 <div class="section_one_three">
                     <h2 class="centered_title">Our Hub</h2>
                     <div class="roundimg">
-                        <a><img src="/assets/images/coffee-icon.png" alt="coffee cup icon"></a>
+                        <a><img src="assets/images/coffee-icon.png" alt="coffee cup icon"></a>
                     </div>
                     <p class="centered_text">Our members lounge is the perfect place to work, play, and connect with other enthusiasts. With fast WiFi, free coffee and snacks, and a relaxed work environment. What's not to love?
                         <br> Other perks include a bookable conference room, white-wall automotive photobooth, pool table and more.
@@ -68,7 +68,7 @@
                 <div class="section_one_three">
                     <h2 class="centered_title">Storage</h2>
                     <div class="roundimg">
-                        <a><img src="/assets/images/car.png" alt="car logo for private storage"></a>
+                        <a><img src="assets/images/car.png" alt="car logo for private storage"></a>
                     </div>
                     <p class="centered_text"> Reserve racked or floor storage in our secure onsite storage facility. Extras included wash and detail services, battery tenders and professional photography.
                         <br>€400/mo. for cars and trucks
@@ -79,7 +79,7 @@
                 <div class="section_one_three">
                     <h2 class="centered_title">Store Front</h2>
                     <div class="roundimg">
-                        <a><img src="/assets/images/shopping-icon.png" alt="shopping bags icon"></a>
+                        <a><img src="assets/images/shopping-icon.png" alt="shopping bags icon"></a>
                     </div>
                     <p class="centered_text">BavarianWorx continually rolling out new enthusiast-driven products to let you take home a piece of the action. Pick up some of our limited-run apparel and goods designed and created by our team in-store or online.
                         Of course Garage Collective isn't only about us; we also want to celebrate what makes YOU special.
@@ -89,14 +89,14 @@
                 <div class="section_one_three">
                     <h2 class="centered_title">Events</h2>
                     <div class="roundimg">
-                        <a><img src="/assets/images/event.png" alt="calendar icon for events"></a>
+                        <a><img src="assets/images/event.png" alt="calendar icon for events"></a>
                     </div>
                     <p class="centered_text">Every month, members of BavarianWorx will get exclusive access to numerous events including track days, happy hour mixers, and masterclasses taught by our own members!</p>
                 </div>
                 <div class="section_one_three">
                     <h2 class="centered_title">Workshop</h2>
                     <div class="roundimg">
-                        <a><img src="/assets/images/piston-icon.png" alt="piston logo for workshop"></a>
+                        <a><img src="assets/images/piston-icon.png" alt="piston logo for workshop"></a>
                     </div>
                     <p class="centered_text">Always wanted a place where to improve and work on your car? We got you covered! Our workshop is fitted with latested tools to help you carry out the DIY you always wanted.
                         We offer two pole jacks as well as scissors lifts to all them lowered cars. Bike lifts are also found in our workshop!
@@ -105,7 +105,7 @@
                 <div class="section_one_three">
                     <h2 class="centered_title">Full-motion simulators</h2>
                     <div class="roundimg">
-                        <a><img src="/assets/images/gaming-icon.png" alt="steering wheel icon for gaming"></a>
+                        <a><img src="gitassets/images/gaming-icon.png" alt="steering wheel icon for gaming"></a>
                     </div>
                     <p class="centered_text">Prepare for your next track day or test your hand and world rally racing. Our fully articulating simulators put you behind the wheel of hundreds of street cars and racecars on tracks around the world.
                      With 4 simulators on our premises, you can play with your friends in real-time and race each other to the finish!</p>
