--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
                 </div>
             <div class="menu">
                 <ul>
-                    <li class="selected">
-                        <a href="index.html">Home</a></li>
+                    <li class="selected"><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
